RESOLVED FIXED275021
[tvOS] Start button incorrectly shown when entering fullscreen
https://bugs.webkit.org/show_bug.cgi?id=275021
Summary [tvOS] Start button incorrectly shown when entering fullscreen
Andy Estes
Reported 2024-06-01 15:21:14 PDT
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-01 15:21:27 PDT
Andy Estes
Comment 2 2024-06-01 15:26:51 PDT
EWS
Comment 3 2024-06-01 21:54:38 PDT
Committed 279622@main (4eb5890b06fe): <https://commits.webkit.org/279622@main> Reviewed commits have been landed. Closing PR #29420 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.