[tvOS] Start button incorrectly shown when entering fullscreen https://bugs.webkit.org/show_bug.cgi?id=275021 rdar://129115814

Reviewed by Eric Carlson.

When in video fullscreen via element fullscreen, HTMLMediaElement::shouldForceControlsDisplay()
would return true. This causes media controls to show a start button even though the media is
already playing. Resolved this by modifying HTMLMediaElement::shouldForceControlsDisplay() to return
false when in video fullscreen via element fullscreen. Note that
HTMLMediaElement::configureMediaControls() will already enable media controls when in video
fullscreen via element fullscreen; we just don't want to *force* controls, which is akin to showing
the start button on iOS-family platforms.

No new tests; covered by an existing test (media/modern-media-controls/start-support/start-support-fullscreen.html).

* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::shouldForceControlsDisplay const):

Canonical link: https://commits.webkit.org/279622@main